Cleaned up the project from the one given in the class.

--- a/OpenGLProject/ModelViewer/ModelViewer.vcxproj
+++ b/OpenGLProject/ModelViewer/ModelViewer.vcxproj
@@ -101,6 +101,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="main.h" />
     <ClInclude Include="Vector3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
