--- a/OpenGLProject/ModelViewer/ModelViewer.vcxproj.filters
+++ b/OpenGLProject/ModelViewer/ModelViewer.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="MyMath.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="stb_image.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Vector3.h">
